--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-Hello World
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<title>Personal Website</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
